<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SeatDetailActivity">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:id="@+id/btn_back_subway"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/btn_back_sub_1"
            tools:ignore="ContentDescription"/>

        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/btn_back_subway"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/res_seat"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <ImageView
        android:id="@+id/btn_real_time_refresh"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/btn_refresh_2"
        tools:ignore="ContentDescription"/>
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e9e9e9" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:id="@+id/line_icon2"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/n_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:includeFontPadding="false"
            android:text="@string/next_station"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_marginTop="15dp"

            android:id="@+id/s_station_nm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:includeFontPadding="false"
            android:text="@string/stop_station"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/subwayline_half"
            android:layout_marginLeft="180dp"
            android:layout_below="@+id/s_station_nm"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sublineimg"
            android:src="@drawable/subwayline_half" />

        <LinearLayout
            android:gravity="right"
            android:layout_below="@+id/subwayline_half"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:id="@+id/arvl_msg_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_arrive"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/arvl_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/no_train"
                android:textColor="#e73921"
                android:textSize="20sp" />


        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e9e9e9" />

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.example.jhw.newexapplication.Indicator
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/res_button"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray"
            android:text="예약"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="#ffffff"/>
    </RelativeLayout>


</LinearLayout>