<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/check_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckReserve">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"

            android:id="@+id/check_line_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <TextView
            android:layout_marginTop="28dp"
            android:id="@+id/check_n_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:includeFontPadding="false"
            android:text="@string/next_station"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_marginTop="28dp"
            android:id="@+id/check_station_nm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:includeFontPadding="false"
            android:text="@string/stop_station"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/subwayline_half"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="180dp"
            android:layout_below="@+id/s_station_nm"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sublineimg"
            android:src="@drawable/subwayline_half" />

        <LinearLayout
            android:gravity="right"
            android:layout_below="@+id/subwayline_half"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:id="@+id/check_arvl_msg_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_arrive"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/check_arvl_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:text="@string/no_train"
                android:textColor="#e73921"
                android:textSize="20sp" />

        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="70dp"
        android:background="#e9e9e9" />

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BlockFragment">
        <TextView
            android:id="@+id/check_number"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="호차"
            android:textSize="20dp"/>

        <ImageView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/train_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:src="@drawable/trafficseat" />

        <ImageView
            android:id="@+id/check_left_seat"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="147dp"
            android:layout_marginTop="73dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/empty_icon" />

        <ImageView
            android:id="@+id/check_right_seat"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="149dp"
            android:adjustViewBounds="true"
            android:src="@drawable/empty_icon" />
        <TextView
            android:id="@+id/res_cancel_button"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="예약 취소"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="#ffffff"/>

    </RelativeLayout>
</LinearLayout>