<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:id="@+id/btn_back_subway"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/btn_back_sub_1"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/info_title"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/btn_real_time_refresh"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_refresh_2"
            tools:ignore="ContentDescription"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e9e9e9" />

    <TextView
        android:id="@+id/station_nm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="#000000"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/line_group_layout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e9e9e9" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/prev_station"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:includeFontPadding="false"
                        android:text="@string/prev_station"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/stop_station_nm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/stop_station"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/next_station"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:includeFontPadding="false"
                        android:text="@string/next_station"
                        android:textColor="#000000"
                        android:textSize="12sp" />
                </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/sublineimg"
                    android:src="@drawable/subwayline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#d6d6d6" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/up_line_arvl_1_msg_heading"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_arrive"
                                android:textColor="#000000"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/up_line_arvl_1_msg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_train"
                                android:textColor="#e73921"
                                android:textSize="12sp" />
                            <RelativeLayout
                                android:id="@+id/up_line_arvl_train"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:adjustViewBounds="true"
                                    android:src="@drawable/train_block"/>
                                <TextView
                                    android:id="@+id/up_line_seat"
                                    android:padding="3dp"
                                    android:layout_width="70dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:background="@drawable/rounded_1"
                                    android:gravity="center"
                                    android:alpha="0.8"
                                    android:textColor="@android:color/black"
                                    android:textStyle="bold"
                                    android:textSize="17dp"
                                    android:text="잔여좌석"/>
                            </RelativeLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/up_line_arvl_2_msg_heading"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_arrive"
                                android:textColor="#000000"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/up_line_arvl_2_msg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_train"
                                android:textColor="#e73921"
                                android:textSize="12sp" />
                            <RelativeLayout
                                android:id="@+id/up_line_arvl_2_train"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:adjustViewBounds="true"
                                    android:src="@drawable/train_block"/>
                                <TextView
                                    android:id="@+id/up_line_2_seat"
                                    android:padding="3dp"
                                    android:layout_width="70dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:background="@drawable/rounded_1"
                                    android:gravity="center"
                                    android:alpha="0.8"
                                    android:textColor="@android:color/black"
                                    android:textStyle="bold"
                                    android:textSize="17dp"
                                    android:text="잔여좌석"/>
                            </RelativeLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#d6d6d6" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/down_line_arvl_1_msg_heading"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_arrive"
                                android:textColor="#000000"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/down_line_arvl_1_msg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_train"
                                android:textColor="#e73921"
                                android:textSize="12sp" />
                            <RelativeLayout
                                android:id="@+id/down_line_arvl_train"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:adjustViewBounds="true"
                                    android:src="@drawable/train_block"/>
                                <TextView
                                    android:id="@+id/down_line_seat"
                                    android:padding="3dp"
                                    android:layout_width="70dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:background="@drawable/rounded_1"
                                    android:gravity="center"
                                    android:alpha="0.8"
                                    android:textColor="@android:color/black"
                                    android:textStyle="bold"
                                    android:textSize="17dp"
                                    android:text="잔여좌석"/>
                            </RelativeLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/down_line_arvl_2_msg_heading"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_arrive"
                                android:textColor="#000000"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/down_line_arvl_2_msg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_train"
                                android:textColor="#e73921"
                                android:textSize="12sp" />
                            <RelativeLayout
                                android:id="@+id/down_line_arvl_2_train"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:adjustViewBounds="true"
                                    android:src="@drawable/train_block"/>
                                <TextView
                                    android:id="@+id/down_line_2_seat"
                                    android:padding="3dp"
                                    android:layout_width="70dp"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:background="@drawable/rounded_1"
                                    android:gravity="center"
                                    android:alpha="0.8"
                                    android:textColor="@android:color/black"
                                    android:textStyle="bold"
                                    android:textSize="17dp"
                                    android:text="잔여좌석"/>
                            </RelativeLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#d6d6d6" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>